--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CLIENT_ID = 177638182406-uo12ctbpq6hf971nrh2a701fbrtlilc8.apps.googleusercontent.com
+REACT_APP_CLIENT_ID = '177638182406-uo12ctbpq6hf971nrh2a701fbrtlilc8.apps.googleusercontent.com'
 
 REACT_APP_API_OAUTH = "https://challenge-7-tim3.herokuapp.com/api/v1/auth/google"
 REACT_APP_API_LOGIN = "https://challenge-7-tim3.herokuapp.com/api/v1/login"
